Using texture projection with external image editor does not work #60133

Closed
opened 2019-01-03 22:02:19 +01:00 by Daniel Bystedt · 12 comments
Member

System Information
Operating system: Windows 10
Graphics card: GTX 1080

Blender Version
Broken: 2.8, 4d795cee49
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional) 2.79 stable

Short description of error
Using texture projection with external image editor does not work. Eg "texture paint > External > Quick edit" does not work.

Error message:
Operator bpy.ops.paint.image_from_view.poll() expected a view3d region
bpy.context.area.ui_type = 'INFO'
Operator bpy.ops.paint.image_from_view.poll() expected a view3d region

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
1.create a cube
2. select it and enable texture paint
3. add texture slot (base color)
4. go to and press button "properties > active tool > external > quick edit"
5. error message is displayed even if I have choosen an external image editor in "edit > preferences >files > image editor"

**System Information** Operating system: Windows 10 Graphics card: GTX 1080 **Blender Version** Broken: 2.8, 4d795cee4938 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) 2.79 stable **Short description of error** Using texture projection with external image editor does not work. Eg "texture paint > External > Quick edit" does not work. Error message: Operator bpy.ops.paint.image_from_view.poll() expected a view3d region bpy.context.area.ui_type = 'INFO' Operator bpy.ops.paint.image_from_view.poll() expected a view3d region **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1.create a cube 2. select it and enable texture paint 3. add texture slot (base color) 4. go to and press button "properties > active tool > external > quick edit" 5. error message is displayed even if I have choosen an external image editor in "edit > preferences >files > image editor"
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-04 10:39:51 +01:00
Member

Confirmed, checking...

Confirmed, checking...

Added subscriber: @PetterLundh

Added subscriber: @PetterLundh
Member

Added subscribers: @WilliamReynish, @ideasman42

Added subscribers: @WilliamReynish, @ideasman42
Member

These operators used to be located in a 3DView.
Now these are still working when called from the 3DView (search menu), but fail from the Properties Editor and TopBar...

One solution would be to alter the poll() and exec() of these operators to find a 3DView [this could be the first 3DView it finds -- or possibly invoking them and using a "pipette" > thus using mouse coords to get the desired 3DView if there are multiple...]

Before implementing I would like to get opinions from @ideasman42 / @WilliamReynish if this is the best way to go?

These operators used to be located in a 3DView. Now these are still working when called from the 3DView (search menu), but fail from the Properties Editor and TopBar... One solution would be to alter the poll() and exec() of these operators to find a 3DView [this could be the first 3DView it finds -- or possibly invoking them and using a "pipette" > thus using mouse coords to get the desired 3DView if there are multiple...] Before implementing I would like to get opinions from @ideasman42 / @WilliamReynish if this is the best way to go?
Author
Member

From an artists standpoint it would work just fine to

  1. Press "properties > active tool > external > quick edit"
  2. use pipette to choose which 3d view to pick up.
From an artists standpoint it would work just fine to 1. Press "properties > active tool > external > quick edit" 2. use pipette to choose which 3d view to pick up.
Member

One solution would be to alter the poll() and exec() of these operators to find a 3DView [this could be the first 3DView it finds -- or possibly invoking them and using a "pipette" > thus using mouse coords to get the desired 3DView if there are multiple...]

alternative: remove those (VIEW3D_PT_tools_imagepaint_external) from the toolsettings and put them as popover in the 3DView header (next to View and Brush)?

> One solution would be to alter the poll() and exec() of these operators to find a 3DView [this could be the first 3DView it finds -- or possibly invoking them and using a "pipette" > thus using mouse coords to get the desired 3DView if there are multiple...] alternative: remove those (`VIEW3D_PT_tools_imagepaint_external`) from the toolsettings and put them as popover in the 3DView header (next to `View` and `Brush`)?

Could be fine too I suppose, yes.

Could be fine too I suppose, yes.
Member

just checked: this was actually marked TODO:

# TODO, move to space_view3d.py
class VIEW3D_PT_tools_imagepaint_external(Panel, View3DPaintPanel):

will do then and commit in a bit...

just checked: this was actually marked TODO: ``` # TODO, move to space_view3d.py class VIEW3D_PT_tools_imagepaint_external(Panel, View3DPaintPanel): ``` will do then and commit in a bit...

This issue was referenced by 5fc4214ada

This issue was referenced by 5fc4214adaaa8d13bc5f2d5d45ee9a814b672e04
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60133
No description provided.